Create layers and add migration

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "KodlamaioCampConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=KodlamaioCampDb; Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
