--- a/corePackages/Core.Persistence/Core.Persistence.csproj
+++ b/corePackages/Core.Persistence/Core.Persistence.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.17" />
+	</ItemGroup>
+
 </Project>
